--- a/bigquery_v3_api/requirements.txt
+++ b/bigquery_v3_api/requirements.txt
@@ -61,6 +61,7 @@ prompt-toolkit==3.0.18
 proto-plus==1.18.1
 protobuf==3.17.2
 ptyprocess==0.7.0
+pyarrow==4.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybigquery==0.9.0
